Revert "доробив візуалку хіро"

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -56,7 +56,7 @@
           maximus. Cras massa nibh, tincidunt.
         </p>
         <p class="about__text">Aliquam erat volutpat. Aenean accumsan.</p>
-        <button type="button" class="about__button" about-modal-open>
+        <button type="button" class="button--white button__about" about-modal-open>
           Read more
           <svg class="about__btn-icon" width="6" height="10">
             <use href="images/sprites.svg#icon-right"></use>
