--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -138,12 +138,11 @@
   }
 }
 
-.about__button {
+.about__btn {
   display: block;
   align-self: center;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 17px;
   height: 44px;
   min-width: 175px;
   border: none;
@@ -159,22 +158,20 @@
   cursor: pointer;
   color: $text-color-red;
   background-color: $background-white;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:focus,
   &:hover {
     background-color: $hover-grey;
+  }
+  .about__btn-icon {
+    margin-left: 14px;
+    fill: $text-color-red;
   }
   @media screen and (min-width: $tablet) {
     font-size: 16px;
     line-height: 1.31;
-    margin-top: 56px;
+    margin-top: 60px;
     margin-left: 0;
   }
   @media screen and (min-width: $desktop) {
     margin-top: 45px;
-  }
-  .about__btn-icon {
-    margin-left: 14px;
-    fill: inherit;
   }
 }
