--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -1,51 +1,82 @@
 .contacts {
-  background: linear-gradient(to top, #fff5f6 92%, #ffffff 0%);
-  background-image: url(/images/contacts/contacts-min.png);
-  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-    background-image: url('/images/contacts/contacts@2x.png');
+  // background: linear-gradient(to top, #fff5f6 92%, #ffffff 0%);
+  // background-image: url(/images/contacts/contacts-min.png);
+  background-size: 100vw;
+  // background-position: bottom center;
+
+  // @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  //   background-image: url(/images/contacts/contacts@2x.png);
+  // }
+
+  @media screen and (min-width: $mobile-container) {
+    background: linear-gradient(to top, #fff5f6 95%, #ffffff 0%);
   }
 
-  @media screen and (max-width: $tablet-container) {
-    background-image: linear-gradient(to top, #fff5f6 93%, #ffffff 0%);
-    background-size: contain;
-    background-position: 50%;
-    background-repeat: no-repeat;
-  }
-
-  @media screen and (min-width: 768px) and (max-width: 1279px) {
-    background-image: linear-gradient(to top, #fff5f6 86%, #ffffff 0%);
-    background-size: contain;
-    background-position: 50%;
-    background-repeat: no-repeat;
+  @media screen and (min-width: $tablet-container) {
+    background: linear-gradient(to top, #fff5f6 92%, #ffffff 0%);
   }
 
   @media screen and (min-width: $desktop) {
     background-image: url(/images/contacts/contacts-min.png),
       linear-gradient(to top, #fff5f6 88%, #ffffff 0%);
-    background-size: contain;
-    background-position: 50%;
+
     background-repeat: no-repeat;
-    padding-bottom: 165px;
+    background-position: 50% 16%;
   }
 }
 
 .contacts__container {
-  display: flex;
+  @media screen and (min-width: 480px) {
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+
+  @media screen and (min-width: $tablet-container) {
+    display: flex;
+  }
+
+  @media screen and (min-width: $desktop-container) {
+    display: flex;
+  }
 }
 
 .contacts__title {
 }
 
 .contacts__card {
-  padding: 51px 44px 62px 43px;
-  width: 330px;
-
   background: $text-color-white;
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
 
-  &:not(:last-child) {
-    margin-right: 30px;
+  @media screen and (min-width: 450px) and (max-width: 767px) {
+    padding: 43px 45px 60px;
+    max-width: 220px;
+    margin: 0 auto;
+
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
+  }
+
+  @media screen and (max-width: 767px) {
+    padding: 43px 20px;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1278px) {
+    width: 220px;
+    padding: 50px 31px;
+    &:not(:last-child) {
+      margin-right: 20px;
+    }
+  }
+
+  @media screen and (min-width: 1279px) {
+    width: 330px;
+    padding: 51px 44px 62px 43px;
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
   }
 }
 
@@ -55,9 +86,6 @@
 }
 
 .contacts__representation {
-  width: 73px;
-  height: 28px;
-
   background: #f0d1a5;
   border-radius: 6px;
 
@@ -70,15 +98,31 @@
   letter-spacing: 0.04em;
 
   color: $text-color-white;
+
+  @media screen and (min-width: $mobile-container) {
+    font-size: 12px;
+    line-height: 1.83;
+    width: 80px;
+  }
+
+  @media screen and (min-width: $tablet-container) {
+    font-size: 16px;
+    line-height: 1.88;
+    width: 73px;
+    height: 28px;
+  }
+
+  @media screen and (min-width: $desktop-container) {
+    font-size: 16px;
+    line-height: 1.88;
+    width: 73px;
+    height: 28px;
+  }
 }
 
 .contacts__representation-truck {
-  width: 138px;
-
   font-style: normal;
   font-weight: 500;
-  font-size: 16px;
-  line-height: 1.88;
 
   text-align: center;
   letter-spacing: 0.04em;
@@ -87,6 +131,24 @@
   border-radius: 6px;
 
   color: #ffffff;
+
+  @media screen and (min-width: $mobile-container) {
+    font-size: 12px;
+    line-height: 1.83;
+    width: 130px;
+  }
+
+  @media screen and (min-width: $tablet-container) {
+    font-size: 16px;
+    line-height: 1.88;
+    width: 138px;
+  }
+
+  @media screen and (min-width: $desktop-container) {
+    font-size: 16px;
+    line-height: 1.88;
+    width: 138px;
+  }
 }
 
 .contacts__item {
@@ -94,11 +156,25 @@
 
   font-style: 400;
   font-weight: 500;
-  font-size: 16px;
-  line-height: 1.88;
   letter-spacing: 0.04em;
 
   color: $text-color-black;
+
+  @media screen and (min-width: $mobile-container) {
+    font-size: 12px;
+    line-height: 1.83;
+  }
+
+  @media screen and (min-width: $tablet-container) {
+    margin-bottom: 14px;
+    font-size: 14px;
+    line-height: 1.86;
+  }
+
+  @media screen and (min-width: $desktop-container) {
+    font-size: 16px;
+    line-height: 1.88;
+  }
 }
 
 .contacts__address {
@@ -116,27 +192,80 @@
   &:not(:last-child) {
     margin-bottom: 15px;
   }
+
+  @media screen and (min-width: $mobile-container) {
+    font-size: 12px;
+    line-height: 1.83;
+  }
+
+  @media screen and (min-width: $tablet-container) {
+    font-size: 14px;
+    line-height: 1.86;
+  }
+
+  @media screen and (min-width: $desktop-container) {
+    font-size: 16px;
+    line-height: 1.88;
+  }
 }
 
 .contacts__pages {
   font-style: normal;
   font-weight: 500;
-  font-size: 15px;
-  line-height: 1.81;
+
   letter-spacing: 0.04em;
 
   color: #907e82;
+
+  @media screen and (min-width: $mobile-container) {
+    font-size: 11px;
+    line-height: 1.5;
+  }
+
+  @media screen and (min-width: $tablet-container) {
+    font-size: 14px;
+    line-height: 1.64;
+  }
+
+  @media screen and (min-width: $desktop-container) {
+    font-size: 15px;
+    line-height: 1.81;
+  }
 }
 
 .contacts__data {
-  margin-top: 32px;
-  margin-bottom: 32px;
-  padding-top: 25px;
-  padding-bottom: 25px;
+  @media screen and (min-width: $mobile-container) {
+    border-bottom: 1px solid #e1e1e1;
+    border-top: 1px solid #e1e1e1;
+    max-width: 179px;
 
-  border-bottom: 1px solid #e1e1e1;
-  border-top: 1px solid #e1e1e1;
-  width: 234px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+
+  @media screen and (min-width: $tablet-container) {
+    border-bottom: 1px solid #e1e1e1;
+    border-top: 1px solid #e1e1e1;
+    max-width: 157px;
+
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
+  @media screen and (min-width: $desktop-container) {
+    border-bottom: 1px solid #e1e1e1;
+    border-top: 1px solid #e1e1e1;
+    max-width: 234px;
+
+    margin-top: 32px;
+    margin-bottom: 32px;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
 }
 .contacts__time {
   font-style: 400;
@@ -146,12 +275,33 @@
 
   color: #ffa5ba;
 
-  // &:not(:last-child) {
-  //   margin-bottom: 15px;
-  // }
+  @media screen and (min-width: $mobile-container) {
+    font-size: 12px;
+    line-height: 1.83;
+  }
+
+  @media screen and (min-width: $tablet-container) {
+    font-size: 16px;
+    line-height: 1.88;
+  }
+
+  @media screen and (min-width: $desktop-container) {
+    font-size: 16px;
+    line-height: 1.88;
+  }
 }
 .contacts__list {
-  margin-top: 32px;
+  @media screen and (min-width: $mobile-container) {
+    margin-top: 25px;
+  }
+
+  @media screen and (min-width: $tablet-container) {
+    margin-top: 30px;
+  }
+
+  @media screen and (min-width: $desktop-container) {
+    margin-top: 32px;
+  }
 }
 
 .contacts__tel {
@@ -161,6 +311,21 @@
   line-height: 1.81;
 
   color: #907e82;
+
+  @media screen and (min-width: $mobile-container) {
+    font-size: 12px;
+    line-height: 1.5;
+  }
+
+  @media screen and (min-width: $tablet-container) {
+    font-size: 14px;
+    line-height: 1.86;
+  }
+
+  @media screen and (min-width: $desktop-container) {
+    font-size: 16px;
+    line-height: 1.81;
+  }
 }
 
 .contacts__mail {
@@ -170,6 +335,21 @@
   line-height: 1.81;
 
   color: #907e82;
+
+  @media screen and (min-width: $mobile-container) {
+    font-size: 12px;
+    line-height: 1.5;
+  }
+
+  @media screen and (min-width: $tablet-container) {
+    font-size: 14px;
+    line-height: 1.86;
+  }
+
+  @media screen and (min-width: $desktop-container) {
+    font-size: 16px;
+    line-height: 1.81;
+  }
 }
 
 .contacts__btn {
@@ -179,6 +359,10 @@
   align-items: center;
   margin-top: 86px;
   padding-bottom: 165px;
+
+  @media screen and (min-width: $mobile-container) and (max-width: 767px) {
+    display: inline-grid;
+  }
 }
 
 .contacts__btn-location,
@@ -211,15 +395,47 @@
 }
 
 .contacts__btn-location {
-  margin-right: 15px;
-  width: 198px;
+  @media screen and (min-width: $mobile-container) {
+    width: 162px;
+  }
+
+  @media screen and (min-width: $tablet-container) {
+    width: 192px;
+    margin-right: 15px;
+  }
+
+  @media screen and (min-width: $desktop-container) {
+    width: 198px;
+    margin-right: 15px;
+  }
 }
 
 .contacts__btn-franchise {
-  min-width: 180px;
+  @media screen and (min-width: $mobile-container) {
+    width: 162px;
+  }
+
+  @media screen and (min-width: $tablet-container) {
+    width: 175px;
+  }
+
+  @media screen and (min-width: $desktop-container) {
+    width: 180px;
+  }
 }
 
 .contacts__btn-icon {
-  margin-left: 14px;
   stroke: #d41443;
+
+  @media screen and (min-width: $mobile-container) {
+    margin-left: 8px;
+  }
+
+  @media screen and (min-width: $tablet-container) {
+    margin-left: 13px;
+  }
+
+  @media screen and (min-width: $desktop-container) {
+    margin-left: 14px;
+  }
 }
