--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -138,7 +138,7 @@
   }
 }
 
-.about__btn {
+.about-button {
   display: block;
   align-self: center;
   margin-left: auto;
@@ -158,20 +158,22 @@
   cursor: pointer;
   color: $text-color-red;
   background-color: $background-white;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:focus,
   &:hover {
     background-color: $hover-grey;
-  }
-  .about__btn-icon {
-    margin-left: 14px;
-    fill: $text-color-red;
   }
   @media screen and (min-width: $tablet) {
     font-size: 16px;
     line-height: 1.31;
-    margin-top: 60px;
+    margin-top: 55px;
     margin-left: 0;
   }
   @media screen and (min-width: $desktop) {
     margin-top: 45px;
+  }
+  .about__btn-icon {
+    margin-left: 14px;
+    fill: $text-color-red;
   }
 }
