поставив якоря на кнопки
поставив якоря на кнопки

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -5,8 +5,10 @@
         <h1 class="hero__title">
           ice cream made with <span class="hero__title-span">passion</span>
         </h1>
-        <button type="button" class="hero__btn-red" href="#products">Products</button>
-        <button type="button" class="hero__btn-white" href="#about">How it’s made?</button>
+        <button type="button" class="hero__btn-red"><a href="#products">Products</a></button>
+        <button type="button" class="hero__btn-white" href="#about">
+          <a href="#about">How it’s made?</a>
+        </button>
       </div>
       <div class="hero__bio-block">
         <picture class="hero__biomilk-picture">
