--- a/src/sass/components/_about-modal.scss
+++ b/src/sass/components/_about-modal.scss
@@ -17,7 +17,7 @@
 
 .about-modal {
   position: absolute;
-  overflow: scroll;
+  overflow: auto;
   height: calc(100vh - 30px);
   width: calc(100vw - 30px);
   background-color: $background-pink;
@@ -28,6 +28,9 @@
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 40px;
+  &::-webkit-scrollbar {
+    width: 0;
+  }
   @media screen and (min-width: 480px) {
     width: 450px;
   }
