--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -55,15 +55,12 @@
 }
 .products {
   @media screen and (min-width: $mobile) {
-    width: 480px;
   }
 
   @media screen and (min-width: $tablet) {
-    width: 720px;
     display: flex;
   }
   @media screen and (min-width: $desktop) {
-    width: 1080px;
     display: flex;
   }
   &__name {
@@ -120,7 +117,6 @@
 }
 
 .products__item {
-  width: 280px;
   margin-left: auto;
   margin-right: auto;
   padding: 0px 0px 40px;
@@ -135,39 +131,56 @@
   }
   @media screen and (min-width: $tablet) {
     width: calc((100%-3 * 20) / 3);
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-right: 20px;
     margin-bottom: 0px;
     padding: 0px 0px 40px;
+    &:last-child {
+      margin-right: 0px;
+    }
   }
   @media screen and (min-width: $desktop) {
     width: calc((100%-3 * 24) / 3);
-    margin-left: 12px;
-    margin-right: 12px;
+    margin-right: 24px;
     margin-bottom: 0px;
     padding: 0px 0px 40px;
+    &:last-child {
+      margin-right: 0px;
+    }
   }
 
   &.ice-cream {
     background-color: #ffa5ba;
     box-shadow: 0px 6px 6px rgba(255, 165, 186, 0.45);
+    &:hover,
+    &:focus {
+      box-shadow: 0px 5px 18px #c7133e;
+    }
   }
   &.ice-coffee {
     background-color: #f0d1a5;
     box-shadow: 0px 6px 6px rgba(240, 209, 165, 0.45);
+    &:hover,
+    &:focus {
+      box-shadow: 0px 5px 18px #d58d07;
+    }
   }
   &.milkshakes {
     background-color: #c2e297;
     box-shadow: 0px 6px 6px rgba(194, 226, 151, 0.45);
+    &:hover,
+    &:focus {
+      box-shadow: 0px 5px 18px #277b43;
+    }
   }
   transition: scale 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
-    transform: scale(1.09);
+    transform: box-shadow-transition-250ms;
     box-shadow: 0px 5px 18px #c7133e;
   }
 }
+
 .products-images {
   display: inline-block;
   width: 100%;
