--- a/src/sass/components/_about-modal.scss
+++ b/src/sass/components/_about-modal.scss
@@ -13,6 +13,9 @@
   visibility: hidden;
   opacity: 0;
   pointer-events: none;
+  width: 1px;
+  height: 1px;
+  margin-left: -1px;
 }
 
 .about-modal {
