--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -1,3 +1,14 @@
+.backdrop-mobile {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+  top: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .is-open {
   visibility: hidden;
   opacity: 0;
@@ -13,7 +24,19 @@
 
   background-color: #e17992;
 
-  z-index: 1000;
+  z-index: 10;
+  @media screen and (min-width: $desktop) {
+    display: none;
+  }
+
+  transform: translateX(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal__header,
+.is-open {
+  transform: translateX(0);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal__btn-close {
@@ -28,7 +51,7 @@
   justify-content: center;
   cursor: pointer;
   fill: $text-color-white;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
     fill: $text-color-red;
