--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -1,3 +1,7 @@
+.products-section {
+  padding-top: 125px;
+  padding-bottom: 120px;
+}
 .addmargin {
   margin-bottom: 144px;
   font-style: normal;
@@ -121,14 +125,20 @@
   margin-right: auto;
   padding: 0px 0px 40px;
   border-radius: 15px;
-  margin-bottom: 150px;
+  margin-bottom: 170px;
 
   &:last-child {
-    margin-bottom: 0px;
+    margin-bottom: 0;
+  }
+
+  @media screen and (max-width: 767px) {
+    max-width: 280px;
   }
 
   @media screen and (min-width: $mobile) {
+    max-width: 280px;
   }
+
   @media screen and (min-width: $tablet) {
     width: calc((100%-3 * 20) / 3);
     margin-right: 20px;
