--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -80,7 +80,7 @@
       </ul>
     </div>
   </div>
-  <div class="container contacts__btn">
+  <div class="container contacts__btn is-hidden">
     <button type="button" class="contacts__btn-location">
       Our Locations
       <svg class="contacts__btn-icon" width="6" height="10">
@@ -93,5 +93,14 @@
         <use href="images/sprites.svg#icon-contacts"></use>
       </svg>
     </button>
+  </div>
+  <div class="container backdrop__contacts" franchise>
+    <div class="contacts__modal">
+      <button type="button" class="modal__btn--close" about-modal-close>
+        <svg class="modal__icon--close" width="18" height="18">
+          <use href="images/sprites.svg#close"></use>
+        </svg>
+      </button>
+    </div>
   </div>
 </section>
