добавил открытие модалки и закрытие

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -80,23 +80,23 @@
       </ul>
     </div>
   </div>
-  <div class="container contacts__btn is-hidden">
+  <div class="container contacts__btn">
     <button type="button" class="contacts__btn-location">
       Our Locations
       <svg class="contacts__btn-icon" width="6" height="10">
         <use href="images/sprites.svg#icon-contacts"></use>
       </svg>
     </button>
-    <button type="button" class="contacts__btn-franchise">
+    <button type="button" class="contacts__btn-franchise" contacts-franchise-open>
       Franchise
       <svg class="contacts__btn-icon" width="6" height="10">
         <use href="images/sprites.svg#icon-contacts"></use>
       </svg>
     </button>
   </div>
-  <div class="container backdrop__contacts" franchise>
+  <div class="container backdrop__contacts" contacts-franchise>
     <div class="contacts__modal">
-      <button type="button" class="modal__btn--close" about-modal-close>
+      <button type="button" class="modal__btn--close" contacts-franchise-close>
         <svg class="modal__icon--close" width="18" height="18">
           <use href="images/sprites.svg#close"></use>
         </svg>
