--- a/src/sass/components/_contacts-modal.scss
+++ b/src/sass/components/_contacts-modal.scss
@@ -35,3 +35,24 @@
     width: 720px;
   }
 }
+
+.modal__btn--close {
+  position: absolute;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: transparent;
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  top: 8px;
+  right: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  fill: currentColor;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: $text-color-red;
+  }
+}
