Настроил правильное открытие модалки)

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -94,13 +94,14 @@
       </svg>
     </button>
   </div>
-  <div class="container backdrop__contacts" contacts-franchise>
-    <div class="contacts__modal">
+  <div class="backdrop is-hidden" contacts-franchise>
+    <div class="about-modal">
       <button type="button" class="modal__btn--close" contacts-franchise-close>
         <svg class="modal__icon--close" width="18" height="18">
           <use href="images/sprites.svg#close"></use>
         </svg>
       </button>
+      <h4>Only hand made</h4>
     </div>
   </div>
 </section>
