--- a/src/sass/components/_contacts-modal.scss
+++ b/src/sass/components/_contacts-modal.scss
@@ -1,20 +1,9 @@
-.backdrop__contacts {
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-  background: rgba(0, 0, 0, 0.2);
-  z-index: 1000;
-  top: 0;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.contacts__modal {
+.abiut-modal {
   position: absolute;
   overflow: auto;
-  height: calc(100vh - 30px);
-  width: calc(100vw - 30px);
-  background-color: $background-pink;
+  height: 100px;
+  width: 100px;
+  background-color: #fff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 20px;
@@ -22,18 +11,6 @@
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 40px;
-  &::-webkit-scrollbar {
-    width: 0;
-  }
-  @media screen and (min-width: 480px) {
-    width: 450px;
-  }
-  @media screen and (min-width: 768px) {
-    width: 620px;
-  }
-  @media screen and (min-width: 1200px) {
-    width: 720px;
-  }
 }
 
 .modal__btn--close {
