--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -5,10 +5,8 @@
         <h1 class="hero__title">
           ice cream made with <span class="hero__title-span">passion</span>
         </h1>
-        <button type="button" class="hero__btn-red"><a href="#products">Products</a></button>
-        <button type="button" class="hero__btn-white" href="#about">
-          <a href="#about">How it’s made?</a>
-        </button>
+        <a href="#products" class="hero__btn-red">Products</a>
+        <a href="#about" class="hero__btn-white">How it’s made?</a>
       </div>
       <div class="hero__bio-block">
         <picture class="hero__biomilk-picture">
