--- a/src/sass/components/_contacts-modal.scss
+++ b/src/sass/components/_contacts-modal.scss
@@ -1,19 +1,40 @@
-.abiut-modal {
+.backdrop-contacts {
+  width: 100vw;
+  height: 100vh;
+  border-radius: 4px;
   position: absolute;
-  overflow: auto;
-  height: 100px;
-  width: 100px;
-  background-color: #fff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 20px;
+  background: rgba(0, 0, 0, 0.2);
+  top: 0;
+  position: fixed;
+  transition: opacity 500ms linear, visibility 500ms linear;
+}
+
+.backdrop-contacts.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.contacts-modal {
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 528px;
+  min-height: 581px;
+  background-color: #ffffff;
+  border-radius: 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   padding: 40px;
+
+  @media screen and (min-width: 450px) {
+    width: 450px;
+    height: 609px;
+  }
 }
 
-.modal__btn--close {
+.modal__btn-close {
   position: absolute;
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: transparent;
