--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -94,9 +94,9 @@
       </svg>
     </button>
   </div>
-  <div class="backdrop is-hidden" contacts-franchise>
-    <div class="about-modal">
-      <button type="button" class="modal__btn--close" contacts-franchise-close>
+  <div class="backdrop-contacts is-hidden" contacts-franchise>
+    <div class="contacts-modal">
+      <button type="button" class="modal__btn-close" contacts-franchise-close>
         <svg class="modal__icon--close" width="18" height="18">
           <use href="images/sprites.svg#close"></use>
         </svg>
