--- a/src/sass/components/_customer-reviews.scss
+++ b/src/sass/components/_customer-reviews.scss
@@ -1,42 +1,35 @@
-.reviews-section{
-  
+.reviews-section {
   display: block;
   text-align: center;
   margin-top: 80px;
   margin-bottom: 86px;
   @media screen and (min-width: $tablet) {
-  margin-top: 121px;
-  margin-bottom: 119px;
-}
-@media screen and (min-width: $desktop) {
-  margin-top: 123px;
-  margin-bottom: 132px;
-}
+    margin-top: 121px;
+    margin-bottom: 119px;
+  }
+  @media screen and (min-width: $desktop) {
+    margin-top: 123px;
+    margin-bottom: 132px;
+  }
 }
 
-.customer-icon{
+.customer-icon {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 31px;
   @media screen and (min-width: $tablet) {
-  margin-bottom: 19px;
+    margin-bottom: 19px;
+  }
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 15px;
+  }
 }
-@media screen and (min-width: $desktop) {
-  margin-bottom: 15px;
-  
-}
-}
 
-
-
-
-.review-text{
-  
-  
+.review-text {
   font-size: 12px;
   line-height: 2.55;
   text-align: center;
-  background-color: #FAFAFA;
+  background-color: #fafafa;
   position: relative;
 
   z-index: 1;
@@ -46,39 +39,36 @@
   padding-bottom: 28px;
   padding-left: 61px;
 
- 
-  
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 50px;
 
-@media screen and (max-width: 767px) {
-  max-width: 280px;
-  
-}
+  @media screen and (max-width: 767px) {
+    max-width: 280px;
+  }
 
   @media screen and (min-width: $tablet) {
-  font-size: 14px;
-  line-height: 2.16;
-  width: 620px;  
-  padding-top: 47px;
-  padding-right: 80px;
-  padding-bottom: 34px;
-  padding-left: 80px;
+    font-size: 14px;
+    line-height: 2.16;
+    width: 620px;
+    padding-top: 47px;
+    padding-right: 80px;
+    padding-bottom: 34px;
+    padding-left: 80px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    font-size: 16px;
+    line-height: 1.86;
+    width: 926px;
+    padding-top: 32px;
+    padding-right: 52px;
+    padding-bottom: 32px;
+    padding-left: 52px;
+  }
 }
 
-@media screen and (min-width: $desktop) {
-  font-size: 16px;
-  line-height: 1.86;
-  width: 926px;
-  padding-top: 32px;
-  padding-right: 52px;
-  padding-bottom: 32px;
-  padding-left: 52px;
-}
-}
-
-.review-text::before{
+.review-text::before {
   content: '';
 
   position: absolute;
@@ -88,23 +78,20 @@
 
   width: 54px;
   height: 40px;
-  
-  background-image: url("../images/customer/commapng.png");
+
+  background-image: url('../images/customer/commapng.png');
   background-repeat: no-repeat;
-  
-  
 
   @media screen and (min-width: $tablet) {
-  top: 30px;
-  left: 40px;
-}
+    top: 30px;
+    left: 40px;
+  }
 
-@media screen and (min-width: $desktop) {
-  top: 15px;
-  left: 35px;
+  @media screen and (min-width: $desktop) {
+    top: 15px;
+    left: 35px;
+  }
 }
-}
-
 
 .review-text::after {
   content: '';
@@ -116,12 +103,11 @@
 
   width: 32px;
   height: 4px;
-  
+
   margin-bottom: 18px;
 
-  background-image: url("../images/customer/dots.png");
+  background-image: url('../images/customer/dots.png');
   background-repeat: no-repeat;
-  
 
   @media screen and (min-width: $tablet) {
     bottom: -44px;
@@ -132,8 +118,7 @@
   }
 }
 
-
-.customer-info{
+.customer-info {
   font-size: 14px;
   line-height: 1.86;
   text-align: center;
@@ -148,44 +133,41 @@
   }
 }
 
-
-
-
-.review-icon{
+.review-icon {
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 
-.review-text__gradient{
+.review-text__gradient {
   display: inline;
   padding-bottom: 5px;
 
-  background: linear-gradient(to right, #E1E1E1, #E1E1E1);
+  background: linear-gradient(to right, #e1e1e1, #e1e1e1);
   background-position: 0 100%;
   background-size: 10px 1px;
   background-repeat: repeat-x;
 }
 
-.slick-prev, .slick-next{
+.slick-prev,
+.slick-next {
+  background-color: #fafafa;
+  transition: $bgc-transition-250ms;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
 
-
-background-color: #FAFAFA;
-width: 40px;
-height: 40px;
-border-radius: 50%;
-
-z-index: 5;
+  z-index: 5;
 }
 
-.slick-prev{
+.slick-prev {
   left: 1%;
 }
-.slick-next{
+.slick-next {
   right: 1%;
 }
 .slick-prev::before,
-.slick-next::before{
+.slick-next::before {
   content: '';
   display: block;
   width: 20px;
@@ -195,11 +177,11 @@ z-index: 5;
   border-left: 3px solid $hover-red;
   border-radius: 2px;
 }
-.slick-prev::before{
+.slick-prev::before {
   transform: rotate(-45deg);
   margin-left: 11px;
 }
-.slick-next::before{
+.slick-next::before {
   transform: rotate(135deg);
   margin-right: 11px;
 }
@@ -208,7 +190,6 @@ z-index: 5;
 .slick-prev:focus,
 .slick-next:hover,
 .slick-next:focus {
-  
   background: $hover-grey;
-  box-shadow: 0px 3px 10px $hover-red;
+  box-shadow: 0px 3px 10px $background-grey;
 }
