анімація хіро і модалка
змінив анімацію хероя і модалка щоб закривалась на бекдроп і хрестик

--- a/src/sass/components/_about-modal.scss
+++ b/src/sass/components/_about-modal.scss
@@ -13,15 +13,12 @@
   visibility: hidden;
   opacity: 0;
   pointer-events: none;
-  width: 1px;
-  height: 1px;
-  margin-left: -1px;
 }
 
 .about-modal {
   position: absolute;
   overflow: auto;
-  height: calc(100vh - 30px);
+  height: 100%;
   width: calc(100vw - 30px);
   background-color: $background-pink;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
