--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -66,7 +66,7 @@
     </div>
   </div>
 </section>
-<div class="backdrop is-hidden" about-modal about-modal-close>
+<div class="backdrop is-hidden" about-modal>
   <div class="about-modal">
     <button type="button" class="modal__btn--close" about-modal-close>
       <svg class="modal__icon--close" width="18" height="18">
