--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -66,44 +66,47 @@
     </div>
   </div>
 </section>
-<div class="backdrop is-hidden" about-modal>
+<div class="about__backdrop is-hidden" about-modal>
   <div class="about-modal">
     <button type="button" class="modal__btn--close" about-modal-close>
       <svg class="modal__icon--close" width="18" height="18">
         <use href="images/sprites.svg#close"></use>
       </svg>
     </button>
-    <h4 class="about__label-modal">Only hand made</h4>
-    <picture class="about__picture">
-      <source srcset="images/about-images/hand-made.webp" type="image/webp" />
-      <source srcset="images/about-images/hand-made.jpg" />
-      <img class="about__img-modal" src="images/about-images/hand-made.jpg" alt="дояр" /></picture>
-    <p class="about__text-modal">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum dolorem minima consequuntur
-      iusto commodi minus nesciunt odit, autem qui inventore omnis vel quis placeat, explicabo ab.
-      Doloremque aperiam atque sapiente.
-    </p>
-    <p class="about__text-modal">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor non magnam sunt eligendi quidem
-      ipsam excepturi consequuntur expedita ex quae numquam consequatur, eveniet nisi. Quo, modi
-      vero, ex est itaque praesentium recusandae fuga, illo quos nemo incidunt corporis optio
-      magnam?
-    </p>
-    <p class="about__text-modal">
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis officiis quae molestias soluta
-      numquam nulla corporis beatae suscipit expedita repellat.
-    </p>
-    <p class="about__text-modal">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga quaerat esse alias ullam ea
-      nisi commodi dignissimos corrupti. Eius veniam deserunt provident beatae at corporis odio,
-      debitis praesentium, quam facere eos optio in et dicta eum reiciendis doloremque? Dolorum
-      recusandae laudantium dignissimos quasi rem, nostrum facilis explicabo totam ullam
-      consequatur.
-    </p>
-    <p class="about__text-modal">
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus odio, voluptas provident
-      aut illo ex esse quis pariatur at, obcaecati animi, veritatis tempora! Repellat, temporibus
-      accusamus nihil aut sunt explicabo.
-    </p>
+    <div class="about__modal-container">
+      <h4 class="about__label-modal">Only hand made</h4>
+      <picture class="about__picture">
+        <source srcset="images/about-images/hand-made.webp" type="image/webp" />
+        <source srcset="images/about-images/hand-made.jpg" />
+        <img class="about__img-modal" src="images/about-images/hand-made.jpg" alt="дояр"
+      /></picture>
+      <p class="about__text-modal">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum dolorem minima consequuntur
+        iusto commodi minus nesciunt odit, autem qui inventore omnis vel quis placeat, explicabo ab.
+        Doloremque aperiam atque sapiente.
+      </p>
+      <p class="about__text-modal">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor non magnam sunt eligendi
+        quidem ipsam excepturi consequuntur expedita ex quae numquam consequatur, eveniet nisi. Quo,
+        modi vero, ex est itaque praesentium recusandae fuga, illo quos nemo incidunt corporis optio
+        magnam?
+      </p>
+      <p class="about__text-modal">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis officiis quae molestias
+        soluta numquam nulla corporis beatae suscipit expedita repellat.
+      </p>
+      <p class="about__text-modal">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga quaerat esse alias ullam ea
+        nisi commodi dignissimos corrupti. Eius veniam deserunt provident beatae at corporis odio,
+        debitis praesentium, quam facere eos optio in et dicta eum reiciendis doloremque? Dolorum
+        recusandae laudantium dignissimos quasi rem, nostrum facilis explicabo totam ullam
+        consequatur.
+      </p>
+      <p class="about__text-modal">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus odio, voluptas provident
+        aut illo ex esse quis pariatur at, obcaecati animi, veritatis tempora! Repellat, temporibus
+        accusamus nihil aut sunt explicabo.
+      </p>
+    </div>
   </div>
 </div>
