--- a/src/sass/components/_about-modal.scss
+++ b/src/sass/components/_about-modal.scss
@@ -1,4 +1,4 @@
-.backdrop {
+.about__backdrop {
   position: fixed;
   width: 100vw;
   height: 100vh;
@@ -17,7 +17,6 @@
 
 .about-modal {
   position: absolute;
-  overflow: auto;
   height: 100%;
   width: calc(100vw - 30px);
   background-color: $background-pink;
@@ -28,9 +27,6 @@
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 40px;
-  &::-webkit-scrollbar {
-    width: 0;
-  }
   @media screen and (min-width: 480px) {
     width: 450px;
   }
@@ -39,6 +35,15 @@
   }
   @media screen and (min-width: 1200px) {
     width: 720px;
+  }
+}
+
+.about__modal-container {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  &::-webkit-scrollbar {
+    width: 0;
   }
 }
 
