add small changes/cleanup

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,5 @@
 <section class="section__hero">
-  <div class="container hero__conteiner">
+  <div class="container hero__container">
     <div class="hero__left-part">
       <div class="hero__title-block">
         <h1 class="hero__title">
