--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -37,7 +37,7 @@
   }
 }
 
-.hero__conteiner {
+.hero__container {
   display: flex;
   justify-content: space-between;
 }
@@ -248,7 +248,6 @@
   animation-delay: 900ms;
   animation-fill-mode: both;
 }
-
 
 .hero__number {
   @media screen and (min-width: $tablet) {
