fix contacts section media variable names,

--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -5,11 +5,11 @@
     background: linear-gradient(to top, #fff5f6 95%, #ffffff 0%);
   }
 
-  @media screen and (min-width: $mobile-container) {
+  @media screen and (min-width: $mobile) {
     background: linear-gradient(to top, #fff5f6 95%, #ffffff 0%);
   }
 
-  @media screen and (min-width: $tablet-container) {
+  @media screen and (min-width: $tablet) {
     background: linear-gradient(to top, #fff5f6 92%, #ffffff 0%);
   }
 
@@ -29,11 +29,11 @@
     justify-content: center;
   }
 
-  @media screen and (min-width: $tablet-container) {
+  @media screen and (min-width: $tablet) {
     display: flex;
   }
 
-  @media screen and (min-width: $desktop-container) {
+  @media screen and (min-width: $desktop) {
     display: flex;
   }
 }
@@ -96,20 +96,20 @@
 
   color: $text-color-white;
 
-  @media screen and (min-width: $mobile-container) {
+  @media screen and (min-width: $mobile) {
     font-size: 12px;
     line-height: 1.83;
     width: 80px;
   }
 
-  @media screen and (min-width: $tablet-container) {
+  @media screen and (min-width: $tablet) {
     font-size: 16px;
     line-height: 1.88;
     width: 73px;
     height: 28px;
   }
 
-  @media screen and (min-width: $desktop-container) {
+  @media screen and (min-width: $desktop) {
     font-size: 16px;
     line-height: 1.88;
     width: 73px;
@@ -129,19 +129,19 @@
 
   color: #ffffff;
 
-  @media screen and (min-width: $mobile-container) {
+  @media screen and (min-width: $mobile) {
     font-size: 12px;
     line-height: 1.83;
     width: 130px;
   }
 
-  @media screen and (min-width: $tablet-container) {
+  @media screen and (min-width: $tablet) {
     font-size: 16px;
     line-height: 1.88;
     width: 138px;
   }
 
-  @media screen and (min-width: $desktop-container) {
+  @media screen and (min-width: $desktop) {
     font-size: 16px;
     line-height: 1.88;
     width: 138px;
@@ -157,18 +157,18 @@
 
   color: $text-color-black;
 
-  @media screen and (min-width: $mobile-container) {
+  @media screen and (min-width: $mobile) {
     font-size: 12px;
     line-height: 1.83;
   }
 
-  @media screen and (min-width: $tablet-container) {
+  @media screen and (min-width: $tablet) {
     margin-bottom: 14px;
     font-size: 14px;
     line-height: 1.86;
   }
 
-  @media screen and (min-width: $desktop-container) {
+  @media screen and (min-width: $desktop) {
     font-size: 16px;
     line-height: 1.88;
   }
@@ -190,17 +190,17 @@
     margin-bottom: 15px;
   }
 
-  @media screen and (min-width: $mobile-container) {
+  @media screen and (min-width: $mobile) {
     font-size: 12px;
     line-height: 1.83;
   }
 
-  @media screen and (min-width: $tablet-container) {
+  @media screen and (min-width: $tablet) {
     font-size: 14px;
     line-height: 1.86;
   }
 
-  @media screen and (min-width: $desktop-container) {
+  @media screen and (min-width: $desktop) {
     font-size: 16px;
     line-height: 1.88;
   }
@@ -214,24 +214,24 @@
 
   color: #907e82;
 
-  @media screen and (min-width: $mobile-container) {
+  @media screen and (min-width: $mobile) {
     font-size: 11px;
     line-height: 1.5;
   }
 
-  @media screen and (min-width: $tablet-container) {
+  @media screen and (min-width: $tablet) {
     font-size: 14px;
     line-height: 1.64;
   }
 
-  @media screen and (min-width: $desktop-container) {
+  @media screen and (min-width: $desktop) {
     font-size: 15px;
     line-height: 1.81;
   }
 }
 
 .contacts__data {
-  @media screen and (min-width: $mobile-container) {
+  @media screen and (min-width: $mobile) {
     border-bottom: 1px solid #e1e1e1;
     border-top: 1px solid #e1e1e1;
     max-width: 179px;
@@ -242,7 +242,7 @@
     padding-bottom: 25px;
   }
 
-  @media screen and (min-width: $tablet-container) {
+  @media screen and (min-width: $tablet) {
     border-bottom: 1px solid #e1e1e1;
     border-top: 1px solid #e1e1e1;
     max-width: 157px;
@@ -253,7 +253,7 @@
     padding-bottom: 30px;
   }
 
-  @media screen and (min-width: $desktop-container) {
+  @media screen and (min-width: $desktop) {
     border-bottom: 1px solid #e1e1e1;
     border-top: 1px solid #e1e1e1;
     max-width: 234px;
@@ -272,31 +272,31 @@
 
   color: #ffa5ba;
 
-  @media screen and (min-width: $mobile-container) {
+  @media screen and (min-width: $mobile) {
     font-size: 12px;
     line-height: 1.83;
   }
 
-  @media screen and (min-width: $tablet-container) and (max-width: 1279px) {
+  @media screen and (min-width: $tablet) and (max-width: 1279px) {
     font-size: 14px;
     line-height: 1.88;
   }
 
-  @media screen and (min-width: $desktop-container) {
+  @media screen and (min-width: $desktop) {
     font-size: 16px;
     line-height: 1.88;
   }
 }
 .contacts__list {
-  @media screen and (min-width: $mobile-container) {
+  @media screen and (min-width: $mobile) {
     margin-top: 25px;
   }
 
-  @media screen and (min-width: $tablet-container) {
+  @media screen and (min-width: $tablet) {
     margin-top: 30px;
   }
 
-  @media screen and (min-width: $desktop-container) {
+  @media screen and (min-width: $desktop) {
     margin-top: 32px;
   }
 }
@@ -309,17 +309,17 @@
 
   color: #907e82;
 
-  @media screen and (min-width: $mobile-container) {
+  @media screen and (min-width: $mobile) {
     font-size: 12px;
     line-height: 1.5;
   }
 
-  @media screen and (min-width: $tablet-container) {
+  @media screen and (min-width: $tablet) {
     font-size: 14px;
     line-height: 1.86;
   }
 
-  @media screen and (min-width: $desktop-container) {
+  @media screen and (min-width: $desktop) {
     font-size: 16px;
     line-height: 1.81;
   }
@@ -333,17 +333,17 @@
 
   color: #907e82;
 
-  @media screen and (min-width: $mobile-container) {
+  @media screen and (min-width: $mobile) {
     font-size: 12px;
     line-height: 1.5;
   }
 
-  @media screen and (min-width: $tablet-container) {
+  @media screen and (min-width: $tablet) {
     font-size: 14px;
     line-height: 1.86;
   }
 
-  @media screen and (min-width: $desktop-container) {
+  @media screen and (min-width: $desktop) {
     font-size: 16px;
     line-height: 1.81;
   }
@@ -402,27 +402,27 @@
     margin-bottom: 10px;
   }
 
-  @media screen and (min-width: $tablet-container) {
+  @media screen and (min-width: $tablet) {
     width: 192px;
     margin-right: 15px;
   }
 
-  @media screen and (min-width: $desktop-container) {
+  @media screen and (min-width: $desktop) {
     width: 198px;
     margin-right: 15px;
   }
 }
 
 .contacts__btn-franchise {
-  @media screen and (min-width: $mobile-container) {
+  @media screen and (min-width: $mobile) {
     width: 162px;
   }
 
-  @media screen and (min-width: $tablet-container) {
+  @media screen and (min-width: $tablet) {
     width: 175px;
   }
 
-  @media screen and (min-width: $desktop-container) {
+  @media screen and (min-width: $desktop) {
     width: 180px;
   }
 }
@@ -430,15 +430,15 @@
 .contacts__btn-icon {
   stroke: #d41443;
 
-  @media screen and (min-width: $mobile-container) {
+  @media screen and (min-width: $mobile) {
     margin-left: 8px;
   }
 
-  @media screen and (min-width: $tablet-container) {
+  @media screen and (min-width: $tablet) {
     margin-left: 13px;
   }
 
-  @media screen and (min-width: $desktop-container) {
+  @media screen and (min-width: $desktop) {
     margin-left: 14px;
   }
 }
