fixed mobile modal menu

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -56,7 +56,7 @@
 </header>
 
 <!-- Modal MENU start -->
-<div class="backdrop-mobile is-open js-menu-container" >
+<div class="backdrop-mobile js-menu-container" >
   <div class="modal__header">
     <button class="modal__btn-close js-close-menu" type="button" >
       <svg class="modal__btn-close-icon" width="14" height="14">
