--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -3,28 +3,35 @@
   width: 100vw;
   height: 100vh;
   background: rgba(0, 0, 0, 0.2);
-  z-index: 1000;
+  z-index: 1001;
   top: 0;
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-open {
-  visibility: hidden;
-  opacity: 0;
-  pointer-events: none;
+  visibility: visible;
+  opacity: 1;
+  pointer-events: all;
 }
 
 .modal__header {
   position: absolute;
   right: 0;
   display: block;
-  width: 250px;
+  width: 100vw;
   height: 100vh;
 
   background-color: #e17992;
 
   z-index: 10;
+  @media screen and (min-width: $tablet) {
+    width: 320px;
+  }
+
   @media screen and (min-width: $desktop) {
     display: none;
   }
@@ -94,6 +101,9 @@
   font-weight: bold;
   font-size: 14px;
   line-height: 18px;
+  display: block;
+  padding-top: 8px;
+  padding-bottom: 8px;
 
   color: $text-color-white;
   &:hover,
