--- a/src/sass/components/_customer-reviews.scss
+++ b/src/sass/components/_customer-reviews.scss
@@ -158,13 +158,23 @@
   border-radius: 50%;
 
   z-index: 5;
+
+  top: 50%;
+  @media screen and(min-width:$tablet) {
+    top: 47%;
+  }
+  @media screen and(min-width:$desktop) {
+    top: 45%;
+}
 }
 
 .slick-prev {
   left: 1%;
+  
 }
 .slick-next {
   right: 1%;
+  
 }
 .slick-prev::before,
 .slick-next::before {
