--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -231,7 +231,7 @@
 }
 
 .contacts__data {
-  @media screen and (min-width: $mobile) {
+  @media screen and (min-width: 320px) and (max-width: 767px) {
     border-bottom: 1px solid #e1e1e1;
     border-top: 1px solid #e1e1e1;
     max-width: 179px;
