--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -21,11 +21,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 34px;
     padding-top: 37px;
   }
   @media screen and (min-width: $desktop) {
-    width: $desktop;
+    padding-top: 37px;
+    width: $desktop-container;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -33,10 +33,9 @@
 }
 
 .header__logo {
-  position: static;
-
   @media screen and (min-width: $desktop) {
     position: absolute;
+    left: -54px;
   }
 }
 
@@ -64,7 +63,7 @@
 
 .header__nav-list {
   @media screen and (min-width: $desktop) {
-    margin-left: 355px;
+    margin-left: 240px;
     display: flex;
   }
 }
