--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -8,6 +8,7 @@
     flex-wrap: wrap;
     align-items: baseline;
     justify-content: space-between;
+    margin-bottom: 91px;
   }
   @media screen and (min-width: $desktop) {
     display: flex;
@@ -18,6 +19,7 @@
     }
 
     .footer__container {
+      margin-bottom: 43px;
       @media screen and (min-width: $tablet) {
         display: flex;
         flex-wrap: wrap;
@@ -105,19 +107,6 @@
 
     // contact
 
-    .footer__contact {
-      display: flex;
-      justify-content: flex-end;
-      align-items: stretch;
-      margin-bottom: 43px;
-      @media screen and (min-width: $tablet) {
-        margin-bottom: 0;
-      }
-      @media screen and (min-width: $desktop) {
-        margin-bottom: 0;
-      }
-    }
-
     .footer__contact--text {
       color: $text-color-black;
     }
@@ -163,8 +152,6 @@
         letter-spacing: 0.02em;
       }
     }
-
-    margin-bottom: 98px;
   }
 }
 
@@ -187,8 +174,9 @@
   margin-bottom: 23px;
   text-align: start;
   @media screen and (min-width: $tablet) {
-    margin-bottom: 91px;
+    margin-bottom: 0px;
   }
+
   @media screen and (min-width: $desktop) {
     margin-bottom: 0;
   }
@@ -297,5 +285,11 @@
     font-size: 14px;
     line-height: 1.85;
     letter-spacing: 0.02em;
+    padding-top: 29px;
+    padding-bottom: 18px;
+  }
+  @media screen and (min-width: $desktop) {
+    padding-top: 9px;
+    padding-bottom: 10px;
   }
 }
