--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -81,7 +81,7 @@
     </div>
   </div>
   <div class="container contacts__btn">
-    <button type="button" class="contacts__btn-location">
+    <button type="button" class="contacts__btn-location" contacts-map-open>
       Our Locations
       <svg class="contacts__btn-icon" width="6" height="10">
         <use href="images/sprites.svg#icon-contacts"></use>
@@ -172,5 +172,23 @@
         <button class="modal-form-button" type="submit">SEND</button>
       </form>
     </div>
+  </div>\
+
+<div class="backdrop-map is-hidden" contacts-map>
+  <div class="map-responsive">
+    <button type="button" class="map-modal-btn" contacts-map-close>
+        <svg class="modal__icon--close" width="18" height="18">
+          <use href="images/sprites.svg#close"></use>
+        </svg>
+      </button>
+    <iframe
+    class="google-maps"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20911.433474673646!2d33.400334193329435!3d49.068980751480076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d753824f6d38bb%3A0xd8433364dd8c3e8f!2z0JzQvtGA0L7QttC10L3QvtC1IElDRSBDUkVBTQ!5e0!3m2!1sru!2sua!4v1638823475412!5m2!1sru!2sua"
+      width="600"
+      height="450"
+      style="border: transparent"
+      allowfullscreen=""
+      loading="lazy"
+    ></iframe>
   </div>
 </section>
