--- a/src/sass/components/_contacts-modal.scss
+++ b/src/sass/components/_contacts-modal.scss
@@ -223,3 +223,83 @@
 .modal-form-chekbox-link {
   color: #d41443;
 }
+
+/////modal-maps//////
+
+.backdrop-map {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: rgba(255, 232, 237, 0.5);
+  overflow-y: scroll;
+  z-index: 1005;
+  opacity: 1;
+  transition: opacity 350ms cubic-bezier(0.8, 0.4, 0.3, 0.9);
+}
+
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+  transition: opacity 350ms cubic-bezier(0.8, 0.4, 0.3, 0.9),
+    visibility 350ms cubic-bezier(0.8, 0.4, 0.3, 0.9);
+}
+
+.backdrop-map.is-hidden .map-responsive {
+  transform: translate(-50%, -50%) scale(1.2);
+}
+
+.map-responsive {
+  position: absolute;
+  width: 305px;
+  height: 412px;
+  padding: 20px;
+  background: #ffb8ca;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 350ms cubic-bezier(0.8, 0.4, 0.3, 0.9);
+  border-radius: 10px;
+  border: 1px solid #d41443;
+  box-shadow: 0px 8px 30px rgb(212 20 67 / 10%);
+  border-radius: 24px;
+
+  @media screen and (min-width: 768px) {
+    width: 500px;
+    height: 425px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    width: 800px;
+    height: 475px;
+  }
+}
+
+.map-modal-btn {
+  color: #d41443;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  top: 5px;
+  right: 5px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-radius: 50%;
+  background-color: transparent;
+  transition: background-color 350ms cubic-bezier(0.8, 0.4, 0.3, 0.9);
+
+  &:focus,
+  &:hover {
+    background-color: #ffffff;
+  }
+}
+
+.google-maps {
+  width: 100%;
+  height: 100%;
+}
