--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,6 +17,7 @@
 @import './components/container';
 @import './components/mobile-menu';
 @import './components/header';
+@import './components/header-modal';
 @import './components/hero';
 @import './components/products';
 @import './components/about';
