--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -172,7 +172,7 @@
         <button class="modal-form-button" type="submit">SEND</button>
       </form>
     </div>
-  </div>\
+  </div>
 
 <div class="backdrop-map is-hidden" contacts-map>
   <div class="map-responsive">
