--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -41,7 +41,7 @@
         </li>
       </ul>
     </nav>
-    <button type="button" class="button--white button__hero">
+    <button type="button" class="button--white button__hero" header-buy-open>
       Buy now
       <svg class="about__btn-icon" width="6" height="10">
         <use href="images/sprites.svg#icon-right"></use>
@@ -51,14 +51,14 @@
 </header>
 
 <!-- Modal MENU start -->
-<div class="backdrop-mobile js-menu-container" >
+<div class="backdrop-mobile js-menu-container">
   <div class="modal__header">
     <button class="modal__btn-close js-close-menu" type="button">
       <svg class="modal__btn-close-icon" width="14" height="14">
         <use href="images/sprites.svg#close"></use>
       </svg>
     </button>
-    <button type="button" class="button--white button__hero-mobile">
+    <button type="button" class="button--white button__hero-mobile" header-buy-open>
       Buy now
       <svg class="about__btn-icon" width="6" height="10">
         <use href="images/sprites.svg#icon-right"></use>
@@ -85,3 +85,54 @@
   </div>
 </div>
 <!-- Modal MENU end -->
+
+<div class="backdrop-header is-hidden" header-buy>
+  <div class="header-buy-modal">
+    <button type="button" class="header-btn-close" header-buy-close>
+      <svg class="modal__icon--close" width="18" height="18">
+        <use href="images/sprites.svg#close"></use>
+      </svg>
+    </button>
+    <form action="#" class="modal-form">
+      <p class="modal-form-head">Buy now</p>
+      <label class="modal-form-field"
+        >Name
+        <span class="modal-form-wrapper">
+          <input
+            type="text"
+            class="modal-form-input"
+            name="user-name"
+            minlength="2"
+            pattern="[a-zA-Zа-яёА-ЯЁ]+"
+            title="Имя должно содержать символы кириллицы или латиницы"
+            required
+          />
+          <svg class="modal-form-icon" width="12" height="12">
+            <use href="/images/sprites.svg#icon-form-user"></use>
+          </svg>
+        </span>
+      </label>
+
+      <label class="modal-form-field"
+        >Tell
+        <span class="modal-form-wrapper">
+          <input
+            type="tel"
+            class="modal-form-input"
+            name="user-tel"
+            pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+            title="099-999-99-99"
+            required
+          />
+          <svg class="modal-form-icon" width="13" height="13">
+            <use href="/images/sprites.svg#icon-form-tel"></use>
+          </svg>
+        </span>
+      </label>
+
+      <input type="checkbox" id="accept-policy" class="modal-form-checkbox visually-hidden" />
+
+      <button class="modal-form-button" type="submit">SEND</button>
+    </form>
+  </div>
+</div>
