fixes ul in contacts

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,8 +1,9 @@
 <section class="contacts" id="contacts">
-  <div class="container contacts__container">
-    <h2 class="contacts__title visually-hidden">Контакты</h2>
+  <h2 class="contacts__title visually-hidden">Контакты</h2>
+  <ul class="container contacts__container">
+    
 
-    <div class="contacts__card">
+    <li class="contacts__card">
       <p class="contacts__representation">CAFE</p>
       <div class="contacts__headline">
         <p class="contacts__item">Chicago</p>
@@ -26,9 +27,9 @@
           <a class="contacts__mail link" href="mailto:noreply@envato.com"> noreply@envato.com</a>
         </li>
       </ul>
-    </div>
+    </li>
 
-    <div class="contacts__card">
+    <li class="contacts__card">
       <p class="contacts__representation-truck">FOOD TRUCK</p>
       <div class="contacts__headline">
         <p class="contacts__item">Los Angeles</p>
@@ -52,9 +53,9 @@
           <a class="contacts__mail link" href="mailto:noreply@envato.com"> noreply@envato.com</a>
         </li>
       </ul>
-    </div>
+    </li>
 
-    <div class="contacts__card">
+    <li class="contacts__card">
       <p class="contacts__representation">CAFE</p>
       <div class="contacts__headline">
         <p class="contacts__item">New York</p>
@@ -78,8 +79,8 @@
           <a class="contacts__mail link" href="mailto:noreply@envato.com"> noreply@envato.com</a>
         </li>
       </ul>
-    </div>
-  </div>
+    </li>
+  </ul>
   <div class="container contacts__btn">
     <button type="button" class="contacts__btn-location" contacts-map-open>
       Our Locations
