--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,68 +1,67 @@
 <section class="gallery">
-    <h2 class="visually-hidden">Gallery</h2>
-    <div class="container">
-        <ul class="gallery__list">
-            <li class="gallery__item gallery__item-1">
-                <div class="gallery__thumb card">
-                    <img class="gallery__img card__inner" src="images/gallery/1.png" alt="" />
-                </div>
-            </li>
-            <li class="gallery__item gallery__item-2">
-                <div class="gallery__thumb card">
-                    <img class="gallery__img card__inner" src="images/gallery/2.png" alt="" />
-                </div>
-            </li>
-            <li class="gallery__item gallery__item-3">
-                <div class="gallery__thumb card">
-                    <img class="gallery__img card__inner" src="images/gallery/3.png" alt="" />
-                </div>
-            </li>
-            <li class="gallery__item gallery__item-4">
-                <div class="gallery__thumb card">
-                    <img class="gallery__img card__inner" src="images/gallery/4.png" alt="" />
-                </div>
-            </li>
-            <li class="gallery__item gallery__item-5">
-                <div class="gallery__thumb card">
-                    <img class="gallery__img card__inner" src="images/gallery/5.png" alt="" />
-                </div>
-            </li>
-            <li class="gallery__item gallery__item-6">
-                <div class="gallery__thumb card">
-                    <img class="gallery__img card__inner" src="images/gallery/6.png" alt="" />
-                </div>
-            </li>
-            <li class="gallery__item gallery__item-7">
-                <div class="gallery__thumb card">
-                    <img class="gallery__img card__inner" src="images/gallery/7.png" alt="" />
-                </div>
-            </li>
-            <li class="gallery__item gallery__item-8">
-                <div class="gallery__thumb card">
-                    <img class="gallery__img card__inner" src="images/gallery/8.png" alt="" />
-                </div>
-            </li>
-            <li class="gallery__item gallery__item-9">
-                <div class="gallery__thumb card">
-                    <img class="gallery__img card__inner" src="images/gallery/9.png" />
-                </div>
-            </li>
-            <li class="gallery__item gallery__item-10">
-                <div class="gallery__thumb card">
-                    <img class="gallery__img card__inner" src="images/gallery/10.png" alt="" />
-                </div>
-            </li>
-        </ul>
+  <h2 class="visually-hidden">Gallery</h2>
+  <div class="container">
+    <ul class="gallery__list">
+      <li class="gallery__item gallery__item-1">
+        <div class="gallery__thumb card">
+          <img class="gallery__img card__inner" src="images/gallery/1.png" alt="ice cream" />
+        </div>
+      </li>
+      <li class="gallery__item gallery__item-2">
+        <div class="gallery__thumb card">
+          <img class="gallery__img card__inner" src="images/gallery/2.png" alt="ice cream" />
+        </div>
+      </li>
+      <li class="gallery__item gallery__item-3">
+        <div class="gallery__thumb card">
+          <img class="gallery__img card__inner" src="images/gallery/3.png" alt="ice cream" />
+        </div>
+      </li>
+      <li class="gallery__item gallery__item-4">
+        <div class="gallery__thumb card">
+          <img class="gallery__img card__inner" src="images/gallery/4.png" alt="ice cream" />
+        </div>
+      </li>
+      <li class="gallery__item gallery__item-5">
+        <div class="gallery__thumb card">
+          <img class="gallery__img card__inner" src="images/gallery/5.png" alt="ice cream" />
+        </div>
+      </li>
+      <li class="gallery__item gallery__item-6">
+        <div class="gallery__thumb card">
+          <img class="gallery__img card__inner" src="images/gallery/6.png" alt="ice cream" />
+        </div>
+      </li>
+      <li class="gallery__item gallery__item-7">
+        <div class="gallery__thumb card">
+          <img class="gallery__img card__inner" src="images/gallery/7.png" alt="ice cream" />
+        </div>
+      </li>
+      <li class="gallery__item gallery__item-8">
+        <div class="gallery__thumb card">
+          <img class="gallery__img card__inner" src="images/gallery/8.png" alt="ice cream" />
+        </div>
+      </li>
+      <li class="gallery__item gallery__item-9">
+        <div class="gallery__thumb card">
+          <img class="gallery__img card__inner" src="images/gallery/9.png" alt="ice cream" />
+        </div>
+      </li>
+      <li class="gallery__item gallery__item-10">
+        <div class="gallery__thumb card">
+          <img class="gallery__img card__inner" src="images/gallery/10.png" alt="ice cream" />
+        </div>
+      </li>
+    </ul>
+  </div>
 
-    </div>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"
+    integrity="sha512-WNLxfP/8cVYL9sj8Jnp6et0BkubLP31jhTG9vhL/F5uEZmg5wEzKoXp1kJslzPQWwPT1eyMiSxlKCgzHLOTOTQ=="
+    crossorigin="anonymous"
+  ></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"
-        integrity="sha512-WNLxfP/8cVYL9sj8Jnp6et0BkubLP31jhTG9vhL/F5uEZmg5wEzKoXp1kJslzPQWwPT1eyMiSxlKCgzHLOTOTQ=="
-        crossorigin="anonymous"></script>
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js"></script>
 
-    <script src="./js/masorny.js"></script>
+  <script src="./js/masorny.js"></script>
 </section>
-
-
