--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,6 +1,6 @@
 html {
   scroll-behavior: smooth;
-  &::-webkit-scrollbar {
-    width: 0;
-  }
+  // &::-webkit-scrollbar {
+  //   width: 0;
+  // }
 }
