--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -70,16 +70,16 @@
         <a class="mobile__nav-link" href="./index.html">Home</a>
       </li>
       <li class="mobile__nav-item">
-        <a class="mobile__nav-link" href="#about">About us</a>
+        <a class="mobile__nav-link" href="/index.html#about">About us</a>
       </li>
       <li class="mobile__nav-item">
-        <a class="mobile__nav-link" href="#about">How it’s made?</a>
+        <a class="mobile__nav-link" href="/index.html#about">How it’s made?</a>
       </li>
       <li class="mobile__nav-item">
-        <a class="mobile__nav-link" href="#products">Our products</a>
+        <a class="mobile__nav-link" href="./index.html#products">Our products</a>
       </li>
       <li class="mobile__nav-item">
-        <a class="mobile__nav-link" href="#contacts">Contact</a>
+        <a class="mobile__nav-link" href="./index.html#contacts">Contact</a>
       </li>
     </ul>
   </div>
