--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -70,10 +70,10 @@
         <a class="mobile__nav-link" href="./index.html">Home</a>
       </li>
       <li class="mobile__nav-item">
-        <a class="mobile__nav-link" href="/index.html#about">About us</a>
+        <a class="mobile__nav-link" href="./index.html#about">About us</a>
       </li>
       <li class="mobile__nav-item">
-        <a class="mobile__nav-link" href="/index.html#about">How it’s made?</a>
+        <a class="mobile__nav-link" href="./index.html#about">How it’s made?</a>
       </li>
       <li class="mobile__nav-item">
         <a class="mobile__nav-link" href="./index.html#products">Our products</a>
